--- a/styles.css
+++ b/styles.css
@@ -97,10 +97,10 @@ table {
 th,
 td {
   padding: 8px 12px;
-  border: 1px solid #ddd;
+  border: 2px solid #ddd;
   text-align: left;
 }
 
 th {
-  background-color: #f2f2f2;
+  background-color: #504f4f;
 }
