cronogram and gantt

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ section {
 section h2 {
   font-size: 24px;
   margin-top: 0;
+  text-align: center;
 }
 
 /* Estilo para las tablas */
@@ -87,4 +88,23 @@ details {
 summary {
   cursor: pointer;
   font-weight: bold;
+}
+
+.container {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.styled-link {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #3498db;
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.styled-link:hover {
+  background-color: #2980b9;
 }
