--- a/styles.css
+++ b/styles.css
@@ -91,8 +91,8 @@ summary {
 }
 
 .container {
-  text-align: center;
   margin-top: 40px;
+  text-align: center; /* Centra la imagen horizontalmente */
 }
 
 .styled-link {
